--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
     <display-name>Archetype Created Web Application</display-name>
+    <!-- Spring配置文件开始 -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
@@ -17,6 +18,18 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
     <!-- Spring配置文件结束 -->
+
+    <!-- logback配置文件开始-->
+    <context-param>
+        <param-name>logbackConfigLocation</param-name>
+        <param-value>
+            classpath:config/logback.xml
+        </param-value>
+    </context-param>
+    <listener>
+        <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
+    </listener>
+    <!-- logback配置文件结束-->
 
     <!-- 可以使用RequestContextHolder.currentRequestAttributes() 获取到请求的attr -->
     <listener>
