--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -1,7 +1,7 @@
 #dataSource configure
 connection.url=jdbc:mysql://localhost:3306/graduation?useUnicode=true&characterEncoding=UTF-8
 connection.username=root
-connection.password=123456
+connection.password=root
 #druid datasource
 druid.initialSize=10
 druid.minIdle=10
